clerk authntication and Storing UserDetail in MongoDB